--- a/static/css/sidebar/style.css
+++ b/static/css/sidebar/style.css
@@ -247,7 +247,7 @@
         display: unset;
         position: fixed;
         z-index: 1060;
-        top: 16px;
+        top: 12px;
         left: 12px;
         width: 32px;
         height: 32px;
